--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 <body>
     <div class="contenedor">
         <nav>
-            <div class="borde logo">logo</div>
+            <div class="borde logo"><img src="landing/assets/img/logo reciclaje.png"width="80%"height="100%"></div>
             <div class="borde menu">menu</div>
-            <div class="borde logo">ingreso</div>
+            <div class="borde ingreso">ingreso</div>
         </nav>
-        <header class="borde"></header>
+        <header class="borde"><h1>Eco-recicla Comunal</h1><br><br><img src="landing/assets/img/reciclando.png"width="900px"height="420px"></header>
         <section class="borde presentacion">
-            <div class="borde mision">Nuestra Mision</div>
-            <div class="borde vision">Nuestra vision</div>
-            <div class="borde objetivo">Nuestro objetivo</div>
+            <div class="borde mision"><h2>Nuestra Mision</h2><p><br>nuestra msision es <br>ayudar a contribuir <br>con el planeta</p></div>
+            <div class="borde vision"><h2>Nuestra vision</h2><p><br>Nuestra vision es que<br>para el año 2030<br>ser una organizacion <br>expandida a mas areas de colombia</p></div>
+            <div class="borde objetivo"><h2>Nuestro objetivo</h2><p>ayudar al medio ambiente y<br>mejorar la calidad de<br>vida de los habitantes</p></div>
 
         </section>
         <section class="borde actividades">
-            <div class="borde actividad_principal">Actividad principal</div>
-            <div class="borde actividad_complementaria">Actividades complementarias</div>
+            <div class="borde actividad_principal"><h2>Actividad principal</h2><br>La actividad principal de esta organizacion es la venta de recursos reciclaves incentivando a la comunidada aportar en el reciclaje acambio del valor correspondiente de el reciclaje</div>
+            <div class="borde actividad_complementaria"><h2>Actividades complementarias:</h2><br><br>dentro de las actividades complementarias esta el aporte a la comunidad en materia de desechos ,apotando a la limpieza y calidad de vida e la comunidad,tambien elaborado campañas para incentivar la inportancia del reciclaje y de una buena conducta con los desechos renovables y no renovables</div>
         </section>
         <section class="borde contacto">
-            <div class="borde correo">correo</div>
-            <div class="borde telefono">telefono</div>
-            <div class="borde direccion">direccion</div>
+            <div class="borde correo">correo:<br><h3>ecoreciclacomunal@gmail.com</h3></div>
+            <div class="borde telefono">telefono:<br><h3>3123114120</h3></div>
+            <div class="borde direccion">direccion:<br><h3>calle 45h #20h-30</h3></div>
         </section>
         <section class="borde mapas">
-            <div class="borde mapa">mapa.img</div>
+            <div class="borde mapa"><img src="landing/assets/img/mapa.jpg"alt="mapa"></div>
         </section>
-        <footer class="borde"></footer>
+        <footer class="borde"><h3>inportancia de esta pagina web</h3><br> para la organizacion esta pagina web ayuda principalmente para que se de a conocer u actividad y publicitar de mejor manera<br>su activiad y ayudar a que ma voluntarios y aliados se puedan unir a esta noble causa de ayudar al planeta.</footer>
 
 
     </div>
