--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eco-recicla Comunal</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
   <link rel="stylesheet" href="landing/assets/css/styles.css">
+  
 </head>
 <body>
   <!-- CABECERA -->
@@ -21,12 +28,40 @@
       <a href="#mapa">Mapa</a>
     </nav>
   </header>
+               
 
   <!-- HERO -->
-  <section id="inicio" class="hero card">
-    <h1>Eco-recicla Comunal</h1>
-    <p class="lead">Unidos para reciclar, cuidar el medio ambiente y mejorar la calidad de vida de la comunidad.</p>
-    <img src="landing/assets/img/reciclando.png" alt="Reciclaje" class="hero-img">
+  <section >
+    <div class="bienvenida"><h1>Eco-reciclaje Comunal</h1></div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="landing/assets/img/reciclando.png" class="d-block w-100" alt="Reciclaje 1">
+        </div>
+        <div class="carousel-item">
+          <img src="landing/assets/img/reciclaje.png"class="d-block w-100" alt="Reciclaje 2">
+        </div>
+        <div class="carousel-item">
+          <img src="landing/assets/img/reciclaje1.png" class="d-block w-100" alt="Reciclaje 3">
+        </div>
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+
   </section>
 
   <!-- MISION, VISION Y OBJETIVO -->
@@ -56,6 +91,14 @@
       <p>Entre las actividades complementarias está el aporte a la comunidad en materia de desechos, limpieza y calidad de vida. También realizamos campañas para incentivar la importancia del reciclaje y de una buena conducta con los desechos renovables y no renovables.</p>
     </div>
   </section>
+  <section id="video"class="card grid-3">
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xcl3DfEt04c?si=CASSGDGIoaWBnnls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div>
+      <h1>inportancia del reciclaje</h1><br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime accusamus alias sapiente itaque nisi tempore voluptatem repellat ducimus praesentium nemo nam veniam corrupti eos, atque optio. Laboriosam, magnam veniam?</p>
+    </div>
+  </section>
 
   <!-- CONTACTO -->
   <section id="contacto" class="card grid-3">
@@ -76,7 +119,8 @@
   <!-- MAPA -->
   <section id="mapa" class="card">
     <h2>Ubicación</h2>
-    <img src="landing/assets/img/mapa.jpg" alt="Mapa de ubicación" class="mapa-img">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1550.9290721695927!2d-74.1702401!3d4.5928071!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9fb0262242fd%3A0x9eca3a5b765d97f6!2sUniminuto%20Perdomo!5e1!3m2!1ses-419!2sco!4v1756179923690!5m2!1ses-419!2sco" width="600" height="450" 
+    style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
 
   <!-- FOOTER -->
@@ -90,5 +134,10 @@
       <a href="#top">↑ Arriba</a>
     </nav>
   </footer>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
